--- a/manifest.json
+++ b/manifest.json
@@ -14,7 +14,7 @@
         "type": "image/png"
         }
     ],
-    "start_url": "/",
+    "start_url": "/cafe-sederhana/",
     "display": "standalone",
     "theme_color": "#1F3641",
     "background_color": "#ffffff",
